fix(test): keep rejection archive tests compatible with Java 8
Replace Path.of and String.repeat with Java 8-compatible equivalents, preserving the long-message round-trip coverage.

Validated on Temurin Java 8: reactor compilation, six archive tests, examples, and Javadoc packaging passed.